fix: align timeline text to the left for better readability

--- a/css/style_experience.css
+++ b/css/style_experience.css
@@ -143,7 +143,7 @@
         float: left;
         width: 41%;
         padding: 0 20px 20px 30px;
-        text-align: right;
+        text-align: left;
     }
 
     .timeline>li .timeline-image {
